# ET-2.0

./: .env.example  .gitignore  README.md  canonical_product_narrative.md  docker-compose.yml  full_solution_plan.md  improvements.md  mvp_build_plan.md  pyproject.toml
backend/petravigil/: __init__.py  main.py
backend/petravigil/data/: seed_knowledge_graph.cypher  supply_network.json
backend/tests/: test_api.py  test_canonical_intelligence_case.py  test_contracts.py  test_crisis_replay.py  test_decision_clock.py  test_decision_safety_gate.py  test_decision_workflow.py  test_economic_selection.py  test_fixture.py  test_integrity_guards.py  test_multi_refinery_allocator.py  test_spr_bridge.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx  premium.css  styles.css
frontend/components/: CrisisReplaySurface.tsx  DecisionClockSurface.tsx  DecisionSafetyGate.tsx  MultiRefineryAllocationSurface.tsx  WorkflowWorkbench.tsx
frontend/lib/: api.ts
outputs/: PetraVigil-Canonical-Case-Deck.pptx  PetraVigil-Grand-Final-Pitch-Deck.pptx  PetraVigil-Grand-Final-Pitch-Deck.pptx.inspect.ndjson  petravigil-final-judge-deck-outline.txt  petravigil-final-judge-deck.pptx  petravigil-final-judge-deck.pptx.inspect.ndjson  petravigil-judge-deck.pptx  petravigil-judge-deck.pptx.inspect.ndjson
outputs/petravigil-grand-final-tmp/: build-deck.mjs  slide-01.layout.json  slide-02.layout.json  slide-03.layout.json  slide-04.layout.json  slide-05.layout.json  slide-06.layout.json  slide-07.layout.json  slide-08.layout.json  slide-09.layout.json
(+17 files in other folders)
