[project]
name = "petravigil"
version = "0.1.0"
description = "Evidence-first energy supply-chain resilience MVP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "numpy>=2.2,<3.0",
    "ortools>=9.14,<10.0",
    "pydantic>=2.10,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/petravigil"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
